--- a/settings.gradle
+++ b/settings.gradle
@@ -3,6 +3,7 @@ rootProject.name = 'org.jrevolt.sysmon'
 include 'common'
 include 'server'
 include 'agent'
+include 'client'
 
 rootProject.children.each { it.name = "$rootProject.name.$it.name" }
 
