... yaml config, rest client, ...

--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,8 @@ buildscript {
 	ext {
 		springVersion = "4.1.0.BUILD-SNAPSHOT"
 //		springBootVersion = "1.0.2.RELEASE"
-		springBootVersion = "1.1.0.BUILD-SNAPSHOT"
+		springBootVersion = "1.1.2.BUILD-SNAPSHOT"
+		activemqVersion = "5.9.1"
 	}
 	repositories {
 		mavenLocal()
