--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,11 +1,14 @@
 
 dependencies{
+	compile project(":org.jrevolt.sysmon.api")
 	compile("org.springframework.boot:spring-boot-starter:${springBootVersion}")
 	compile("org.springframework.boot:spring-boot-starter-amqp:${springBootVersion}")
 	compile("org.springframework:spring-jms:${springVersion}")
-//	compile("org.apache.activemq:activemq-broker:5.9.1")
-	compile("org.apache.activemq:activemq-http:5.9.1")
-	compile("org.apache.activemq:activemq-client:5.9.1")
+//	compile("org.apache.activemq:activemq-broker:${activemqVersion}")
+//	compile("org.apache.activemq:activemq-http:${activemqVersion}")
+	compile("org.apache.activemq:activemq-amqp:${activemqVersion}")
+//	compile("org.apache.activemq:activemq-all:${activemqVersion}")
+	compile("org.apache.activemq:activemq-client:${activemqVersion}")
 	compile("org.apache.geronimo.specs:geronimo-jms_1.1_spec:1.1")
 	compile("com.fasterxml.jackson.core:jackson-databind:2.4.0")
 	compile("com.thoughtworks.xstream:xstream:1.4.7")
