loading classpath*:spring.yaml

--- a/agent/src/main/application.yaml
+++ b/agent/src/main/application.yaml
@@ -1,5 +1,4 @@
-spring.activemq:
-   inMemory:   false
-   brokerUrl:  tcp://localhost:61616
-   user:       system
-   password:   manager
+spring.application:
+   name: JRevolt SysMon Agent
+
+
