--- a/server/src/main/application.yaml
+++ b/server/src/main/application.yaml
@@ -3,7 +3,7 @@ spring.application:
 
 spring.activemq:
    inMemory:   false
-   brokerUrl:  tcp://localhost:61616
+#   brokerUrl:  tcp://localhost:61616
    user:       system
    password:   manager
 
