--- a/core/build.gradle
+++ b/core/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'java'
 
 dependencies {
 	compile("org.springframework:spring-context:${springVersion}")
+	compile("org.springframework.boot:spring-boot-loader:${springBootVersion}")
 	compile("org.springframework.boot:spring-boot-autoconfigure:${springBootVersion}")
 	compile("commons-io:commons-io:2.4")
 	compile("org.apache.commons:commons-lang3:3.2")
