--- a/server/build.gradle
+++ b/server/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'spring-boot'
 springBoot {
 	mainClass = "io.jrevolt.sysmon.server.ServerMain"
 	layout = "MAVEN"
+	customConfiguration = "runtime"
 }
 
 dependencies {
