save stage coordinates

--- a/client/src/main/application.yaml
+++ b/client/src/main/application.yaml
@@ -2,6 +2,7 @@ spring.application:
    name: JRevolt SysMon Client
 
 sysmon.client:
+   directory: ${user.home}/.io.jrevolt.sysmon/client
    serverUrl: ${sysmon.server.url}
 
 
