--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,4 @@
-*.class
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.ear
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-
+# IDEA
 /.idea
 *.iml
 
@@ -19,3 +7,6 @@ hs_err_pid*
 /.build
 /gradle.properties
 /mybuild.sh
+
+# DCOM
+/*-dcom.sk.yaml
