--- a/settings.gradle
+++ b/settings.gradle
@@ -1,10 +1,10 @@
 rootProject.name = 'io.jrevolt.sysmon'
 
-include 'core'
-include 'common'
+include 'model'
+include 'jms'
+include 'rest'
 include 'server'
 include 'agent'
-include 'api'
 include 'client'
 
 rootProject.children.each { it.name = "$rootProject.name.$it.name" }
