--- a/jms/src/main/spring.yaml
+++ b/jms/src/main/spring.yaml
@@ -1,7 +1,8 @@
 spring.activemq:
       inMemory:   false
-#      brokerUrl:  https://build.dcom.sk:443/jms
-      brokerUrl:  tcp://localhost:61616
+      hostname: localhost
+#      brokerUrl:  https://st1mons11.test.dcom.sk/mq
+      brokerUrl:  tcp://${spring.activemq.hostname}:61616
 #      brokerUrl:  amqp://greenbook:5672
 #      brokerUrl:  amqp://greenbook:5673
 #      user:       system
