--- a/server/build.gradle
+++ b/server/build.gradle
@@ -12,7 +12,14 @@ dependencies {
 	compile("org.springframework.boot:spring-boot-starter-web:${springBootVersion}")
 	compile("org.springframework.boot:spring-boot-starter-actuator:${springBootVersion}")
 
-	compile("org.glassfish.jersey.containers:jersey-container-servlet:2.8-SNAPSHOT")
-	compile("org.glassfish.jersey.containers:jersey-container-servlet-core:2.8-SNAPSHOT")
-	compile("org.glassfish.jersey.ext:jersey-spring3:2.7")
+	compile("org.glassfish.jersey.containers:jersey-container-servlet:${jerseyVersion}")
+	compile("org.glassfish.jersey.containers:jersey-container-servlet-core:${jerseyVersion}")
+	compile("org.glassfish.jersey.media:jersey-media-moxy:${jerseyVersion}")
+	compile("org.glassfish.jersey.media:jersey-media-json-processing:${jerseyVersion}")
+	compile("org.glassfish.jersey.ext:jersey-spring3:${jerseyVersion}")
+	compile("org.glassfish.jersey.ext:jersey-bean-validation:${jerseyVersion}")
+
+	testCompile("org.springframework.boot:spring-boot-starter-test:${springBootVersion}")
+//	testCompile("org.glassfish.jersey.test-framework:jersey-test-framework-core:2.12")
+//	testCompile("org.glassfish.jersey.test-framework.providers:jersey-test-framework-provider-inmemory:2.12")
 }
