--- a/build.gradle
+++ b/build.gradle
@@ -64,6 +64,22 @@ subprojects {
 		mavenCentral()
 	}
 
+	compileJava.doLast { task ->
+		manifest.attributes(
+				"Artifact-URI"			: "$project.group:$project.name:$project.version",
+				"Artifact-Version" 	: "$branchShort-$commitShort",
+				)
+		manifest.writeTo(project.buildDir.toString()+"/classes/main/META-INF/MANIFEST.MF")
+	}
+
+//	jar {
+//		manifest.attributes(
+//				"Artifact" 		: "$project.group:$project.name:$project.version",
+//				"Git-Branch" 	: "$branch",
+//				"Git-Version" 	: "$commitShort",
+//		)
+//	}
+
 //	jar.doLast { task ->
 //		["jarsigner", "-keystore", ".keystore", "-storepass", "changeit", "-keypass", "changeit",
 //		 task.archivePath, "jrevolt.io"].execute()
