--- a/build.gradle
+++ b/build.gradle
@@ -78,8 +78,8 @@ subprojects {
 	}
 
 	jar.doLast { task ->
-		["jarsigner", "-keystore", ".keystore", "-storepass", "changeit", "-keypass", "changeit",
-		 task.archivePath, "teamcity@build.dcom.sk"].execute()
+		["jarsigner", "-keystore", "${keyStoreFile}", "-storepass", "${keyStorePassword}", "-keypass", "${keyPassword}",
+		 task.archivePath, "${keyAlias}"].execute()
 	}
 
 	uploadArchives {
