generic multi-platform converter architecture (JAXB/JSON/XStream)

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -8,4 +8,5 @@ dependencies {
 	compile("org.apache.commons:commons-lang3:3.2")
 	compile("ch.qos.logback:logback-classic:1.1.2")
 	compile("javax.ws.rs:javax.ws.rs-api:2.0")
+	compile("com.thoughtworks.xstream:xstream:1.4.7")
 }
