--- a/model/build.gradle
+++ b/model/build.gradle
@@ -1,6 +1,8 @@
 apply plugin: 'java'
 
 dependencies {
+	compile project(":io.jrevolt.sysmon.common")
+
 	compile("org.springframework:spring-context:${springVersion}")
 	compile("org.springframework.boot:spring-boot-loader:${springBootVersion}")
 	compile("org.springframework.boot:spring-boot-autoconfigure:${springBootVersion}")
@@ -8,4 +10,5 @@ dependencies {
 	compile("org.apache.commons:commons-lang3:3.2")
 	compile("ch.qos.logback:logback-classic:1.1.2")
 	compile("javax.ws.rs:javax.ws.rs-api:2.0")
+	compile("com.thoughtworks.xstream:xstream:1.4.7")
 }
