--- a/install/src/main/agent/bin/linux-x86-64/wrapper.conf
+++ b/install/src/main/agent/bin/linux-x86-64/wrapper.conf
@@ -68,10 +68,11 @@ wrapper.app.parameter.1=org.springframework.boot.loader.Main
 wrapper.app.parameter.2=io.jrevolt.sysmon:io.jrevolt.sysmon.agent:develop-SNAPSHOT
 wrapper.app.parameter.3=--MvnLauncher.update=true
 wrapper.app.parameter.4=--MvnLauncher.defaults=file:///opt/dcomtools/springboot.properties
-wrapper.app.parameter.5=--logging.file=%SYSMON_HOME%/log/agent.log
-wrapper.app.parameter.6=--cluster.name=%CLUSTER_NAME%
-wrapper.app.parameter.7=--server.name=%SERVER_NAME%
-wrapper.app.parameter.8=--spring.activemq.hostname=%AMQ_HOSTNAME%
+wrapper.app.parameter.5=--MvnLauncher.updateInterval=0
+wrapper.app.parameter.6=--logging.file=%SYSMON_HOME%/log/agent.log
+wrapper.app.parameter.7=--cluster.name=%CLUSTER_NAME%
+wrapper.app.parameter.8=--server.name=%SERVER_NAME%
+wrapper.app.parameter.9=--spring.activemq.hostname=%AMQ_HOSTNAME%
 
 wrapper.on_exit.7=RESTART
 
