--- a/install/src/main/server/bin/linux-x86-64/wrapper.conf
+++ b/install/src/main/server/bin/linux-x86-64/wrapper.conf
@@ -68,9 +68,10 @@ wrapper.app.parameter.1=org.springframework.boot.loader.Main
 wrapper.app.parameter.2=io.jrevolt.sysmon:io.jrevolt.sysmon.server:develop-SNAPSHOT
 wrapper.app.parameter.3=--MvnLauncher.update=true
 wrapper.app.parameter.4=--MvnLauncher.defaults=file:///opt/dcomtools/springboot.properties
-wrapper.app.parameter.5=--logging.file=%SYSMON_HOME%/log/server.log
-wrapper.app.parameter.6=--spring.config.location=file:%SYSMON_HOME%/blueprint/
-wrapper.app.parameter.7=--spring.profiles.active=%DCOM_ENV%
+wrapper.app.parameter.5=--MvnLauncher.updateInterval=0
+wrapper.app.parameter.6=--logging.file=%SYSMON_HOME%/log/server.log
+wrapper.app.parameter.7=--spring.config.location=file:%SYSMON_HOME%/blueprint/
+wrapper.app.parameter.8=--spring.profiles.active=%DCOM_ENV%
 
 wrapper.on_exit.7=RESTART
 
