--- a/install/src/main/agent/bin/linux-x86-64/sysmon-agent.conf
+++ b/install/src/main/agent/bin/linux-x86-64/sysmon-agent.conf
@@ -10,9 +10,19 @@ cluster_name() {
         esac
 }
 
+sysmon_version() {
+	case $(hostname) in
+		*.dev.dcom.sk)		echo "integration-SNAPSHOT" ;;
+		*.test.dcom.sk)	echo "test-SNAPSHOT" ;;
+		*.intra.dcom.sk)	echo "prod-SNAPSHOT" ;;
+		*)						echo "develop-SNAPSHOT" ;;
+	esac
+}
+
 export JAVA_HOME="/opt/jre8"
 export PATH="$JAVA_HOME/bin:$PATH"
 export RUN_AS_USER="sysmon"
 export CLUSTER_NAME="$(cluster_name)"
 export SERVER_NAME="$(hostname)"
 export AMQ_HOSTNAME="lbmon.intra.dcom.sk"
+export SYSMON_VERSION="$(sysmon_version)"
