--- a/install/src/main/server/bin/linux-x86-64/sysmon-server.conf
+++ b/install/src/main/server/bin/linux-x86-64/sysmon-server.conf
@@ -19,8 +19,18 @@ dcom_env() {
 	esac
 }
 
+sysmon_version() {
+	case $(hostname) in
+		*.dev.dcom.sk)		echo "integration-SNAPSHOT" ;;
+		*.test.dcom.sk)	echo "test-SNAPSHOT" ;;
+		*.intra.dcom.sk)	echo "prod-SNAPSHOT" ;;
+		*)						echo "develop-SNAPSHOT" ;;
+	esac
+}
+
 export JAVA_HOME="/opt/jre8"
 export PATH="$JAVA_HOME/bin:$PATH"
 export RUN_AS_USER="sysmon"
 export DOMAIN="$(domain_name)"
 export DCOM_ENV="$(dcom_env $DOMAIN)"
+export SYSMON_VERSION="$(sysmon_version)"
