--- a/install/src/main/server/bin/linux-x86-64/wrapper.conf
+++ b/install/src/main/server/bin/linux-x86-64/wrapper.conf
@@ -65,7 +65,7 @@ wrapper.java.maxmemory=1024
 
 # Application parameters.  Add parameters as needed starting from 1
 wrapper.app.parameter.1=org.springframework.boot.loader.Main
-wrapper.app.parameter.2=io.jrevolt.sysmon:io.jrevolt.sysmon.server:develop-SNAPSHOT
+wrapper.app.parameter.2=io.jrevolt.sysmon:io.jrevolt.sysmon.server:%SYSMON_VERSION%
 wrapper.app.parameter.3=--MvnLauncher.update=true
 wrapper.app.parameter.4=--MvnLauncher.defaults=file:///opt/dcomtools/springboot.properties
 wrapper.app.parameter.5=--MvnLauncher.updateInterval=0
