--- a/rest/build.gradle
+++ b/rest/build.gradle
@@ -4,4 +4,5 @@ dependencies {
 	compile project(":io.jrevolt.sysmon.model")
 
 	compile("javax.ws.rs:javax.ws.rs-api:2.0")
+	compile("org.springframework:spring-web:4.1.1.RELEASE")
 }
