--- a/agent/build.gradle
+++ b/agent/build.gradle
@@ -8,4 +8,6 @@ springBoot {
 dependencies {
 	compile project(":io.jrevolt.sysmon.common")
 	compile project(":io.jrevolt.sysmon.jms")
+
+	compile("com.microsoft.sqlserver:sqljdbc4:4.0")
 }
