--- a/build.gradle
+++ b/build.gradle
@@ -21,8 +21,8 @@ buildscript {
 }
 
 ext {
-//	branch = "$git rev-parse --abbrev-ref HEAD".execute().in.text.trim()
-	branch = "integration"
+	branch = "$git rev-parse --abbrev-ref HEAD".execute().in.text.trim()
+//	branch = "integration"
 	branchShort = branch.replaceFirst(".*/", "")
 	commit = "$git rev-parse HEAD".execute().in.text.trim()
 	commitShort = commit.length() > 7 ? commit.substring(0, 7) : commit
