--- a/client/build.gradle
+++ b/client/build.gradle
@@ -10,6 +10,7 @@ dependencies {
 	compile project(":io.jrevolt.sysmon.rest")
 
 	compile("org.springframework.boot:spring-boot-starter:${springBootVersion}")
+	compile("org.springframework:spring-web:${springVersion}")
 	compile("org.glassfish.jersey.core:jersey-client:${jerseyVersion}")
 	compile("org.glassfish.jersey.media:jersey-media-moxy:${jerseyVersion}")
 	compile("org.glassfish.jersey.media:jersey-media-json-processing:${jerseyVersion}")
