--- a/install/src/main/agent/bin/linux-x86-64/wrapper.conf
+++ b/install/src/main/agent/bin/linux-x86-64/wrapper.conf
@@ -74,6 +74,7 @@ wrapper.app.parameter.7=--cluster.name=%CLUSTER_NAME%
 wrapper.app.parameter.8=--server.name=%SERVER_NAME%
 wrapper.app.parameter.9=--spring.activemq.hostname=%AMQ_HOSTNAME%
 
+wrapper.shutdown.timeout=45
 wrapper.on_exit.7=RESTART
 
 #********************************************************************
