--- a/install/src/main/server/bin/linux-x86-64/wrapper.conf
+++ b/install/src/main/server/bin/linux-x86-64/wrapper.conf
@@ -73,6 +73,7 @@ wrapper.app.parameter.6=--logging.file=%SYSMON_HOME%/log/server.log
 wrapper.app.parameter.7=--spring.config.location=file:%SYSMON_HOME%/blueprint/
 wrapper.app.parameter.8=--spring.profiles.active=%DCOM_ENV%
 
+wrapper.shutdown.timeout=60
 wrapper.on_exit.7=RESTART
 
 #********************************************************************
