--- a/server/build.gradle
+++ b/server/build.gradle
@@ -20,6 +20,8 @@ dependencies {
 	compile("org.glassfish.jersey.ext:jersey-spring3:${jerseyVersion}")
 	compile("org.glassfish.jersey.ext:jersey-bean-validation:${jerseyVersion}")
 
+	compile("org.jolokia:jolokia-core:1.2.2")
+
 	testCompile("org.springframework.boot:spring-boot-starter-test:${springBootVersion}")
 //	testCompile("org.glassfish.jersey.test-framework:jersey-test-framework-core:2.12")
 //	testCompile("org.glassfish.jersey.test-framework.providers:jersey-test-framework-provider-inmemory:2.12")
