server service: JVM exit timeout + JMX port update

--- a/install/src/main/server/bin/linux-x86-64/wrapper.conf
+++ b/install/src/main/server/bin/linux-x86-64/wrapper.conf
@@ -46,7 +46,7 @@ wrapper.java.library.path.1=%SYSMON_HOME%/bin/linux-x86-64/
 wrapper.java.additional.1=-Dcom.sun.management.jmxremote
 
 # Uncomment to enable jmx
-wrapper.java.additional.2=-Dcom.sun.management.jmxremote.port=1616
+wrapper.java.additional.2=-Dcom.sun.management.jmxremote.port=1617
 wrapper.java.additional.3=-Dcom.sun.management.jmxremote.authenticate=false
 wrapper.java.additional.4=-Dcom.sun.management.jmxremote.ssl=false
 
@@ -73,7 +73,7 @@ wrapper.app.parameter.6=--logging.file=%SYSMON_HOME%/log/server.log
 wrapper.app.parameter.7=--spring.config.location=file:%SYSMON_HOME%/blueprint/
 wrapper.app.parameter.8=--spring.profiles.active=%DCOM_ENV%
 
-wrapper.shutdown.timeout=60
+wrapper.jvm_exit.timeout=60
 wrapper.on_exit.7=RESTART
 
 #********************************************************************
