--- a/server/build.gradle
+++ b/server/build.gradle
@@ -15,10 +15,11 @@ dependencies {
 
 	compile("org.glassfish.jersey.containers:jersey-container-servlet:${jerseyVersion}")
 	compile("org.glassfish.jersey.containers:jersey-container-servlet-core:${jerseyVersion}")
-	compile("org.glassfish.jersey.media:jersey-media-moxy:${jerseyVersion}")
-	compile("org.glassfish.jersey.media:jersey-media-json-processing:${jerseyVersion}")
+	compile("org.glassfish.jersey.media:jersey-media-json-jackson:${jerseyVersion}")
 	compile("org.glassfish.jersey.ext:jersey-spring3:${jerseyVersion}")
 	compile("org.glassfish.jersey.ext:jersey-bean-validation:${jerseyVersion}")
+
+	compile("com.fasterxml.jackson.jaxrs:jackson-jaxrs-providers:2.4.3")
 
 	compile("org.jolokia:jolokia-core:1.2.2")
 
