--- a/install/src/main/agent/bin/linux-x86-64/sysmon-agent.conf
+++ b/install/src/main/agent/bin/linux-x86-64/sysmon-agent.conf
@@ -3,17 +3,18 @@
 
 cluster_name() {
         case $(hostname) in
-                s*epod0*) echo "epod-intra" ;;
-                s*epod1*) echo "epod-public" ;;
-                s*egov0*) echo "epod-redis" ;;
-                s*egov1*) echo "epod-public" ;;
-                s*egov2*) echo "epod-fo" ;;
-                s*egov3*) echo "epod-office" ;;
-                s*egov4*) echo "epod-widgets" ;;
-                s*port0[12]*) echo "port-public" ;;
-                s*port0[34]*) echo "port-intra" ;;
-                s*port0[56]*) echo "port-aspublic" ;;
-                s*port0[78]*) echo "port-asintra" ;;
+                s*epod0*) echo "epod0-intra" ;;
+                s*epod1*) echo "epod1-public" ;;
+                s*egov0*) echo "egov0-redis" ;;
+                s*egov1*) echo "egov1-public" ;;
+                s*egov2*) echo "egov2-fo" ;;
+                s*egov3*) echo "egov3-office" ;;
+                s*egov4*) echo "egov4-widgets-public" ;;
+                s*egov5*) echo "egov5-widgets-intra" ;;
+                s*prox0[12]*) echo "prox0-public" ;;
+                s*port1[12]*) echo "prox1-intra" ;;
+                s*port0[12]*) echo "port0-public" ;;
+                s*port1[12]*) echo "port1-intra" ;;
                 s*)       hostname | sed 's/s[itp][0-9]//; s/[0-9][0-9].*//' ;;
                 *)        echo "Cannot determine cluster name"; exit ;;
         esac
