--- a/jms/build.gradle
+++ b/jms/build.gradle
@@ -4,6 +4,7 @@ dependencies{
 
 	compile("org.springframework.boot:spring-boot-starter:${springBootVersion}")
 	compile("org.springframework.boot:spring-boot-starter-amqp:${springBootVersion}")
+//	compile("org.springframework.boot:spring-boot-starter-websocket:${springBootVersion}")
 	compile("org.springframework:spring-jms:${springVersion}")
 	compile("org.springframework:spring-aspects:${springVersion}")
 //	compile("org.apache.activemq:activemq-broker:${activemqVersion}")
@@ -12,6 +13,8 @@ dependencies{
 //		exclude module: ":jetty-all-server"
 //	}
 	compile("org.apache.activemq:activemq-amqp:${activemqVersion}")
+//	compile("org.apache.activemq:activemq-stomp:${activemqVersion}")
+//	compile("org.apache.activemq:activemq-optional:${activemqVersion}")
 	compile("org.apache.activemq:activemq-client:${activemqVersion}")
 	compile("org.apache.geronimo.specs:geronimo-jms_1.1_spec:1.1")
 	compile("com.fasterxml.jackson.core:jackson-databind:2.4.0")
