--- a/client/build.gradle
+++ b/client/build.gradle
@@ -11,12 +11,16 @@ dependencies {
 
 	compile("org.springframework.boot:spring-boot-starter:${springBootVersion}")
 	compile("org.springframework:spring-web:${springVersion}")
+
 	compile("org.glassfish.jersey.core:jersey-client:${jerseyVersion}")
-	compile("org.glassfish.jersey.media:jersey-media-moxy:${jerseyVersion}")
-	compile("org.glassfish.jersey.media:jersey-media-json-processing:${jerseyVersion}")
-	compile("org.glassfish.jersey.ext:jersey-spring3:${jerseyVersion}")
 	compile("org.glassfish.jersey.ext:jersey-bean-validation:${jerseyVersion}")
 	compile("org.glassfish.jersey.ext:jersey-proxy-client:${jerseyVersion}")
+	compile("org.glassfish.jersey.ext:jersey-spring3:${jerseyVersion}")
+	compile("org.glassfish.jersey.ext:jersey-spring3:${jerseyVersion}")
+	compile("org.glassfish.jersey.media:jersey-media-json-jackson:${jerseyVersion}")
+
+	compile("com.fasterxml.jackson.jaxrs:jackson-jaxrs-providers:2.4.3")
+
 	compile("com.jcraft:jsch:0.1.51")
 	compile("org.jolokia:jolokia-client-java:1.2.2")
 }
