--- a/model/build.gradle
+++ b/model/build.gradle
@@ -4,7 +4,7 @@ dependencies {
 	compile project(":io.jrevolt.sysmon.common")
 
 	compile("org.springframework:spring-context:${springVersion}")
-	compile("org.springframework.boot:spring-boot-loader:${springBootVersion}")
+	compile("org.springframework.boot:spring-boot-launcher:${springBootVersion}")
 	compile("org.springframework.boot:spring-boot-autoconfigure:${springBootVersion}")
 	compile("commons-io:commons-io:2.4")
 	compile("org.apache.commons:commons-lang3:3.2")
