--- a/settings.gradle
+++ b/settings.gradle
@@ -6,6 +6,7 @@ include 'jms'
 include 'rest'
 include 'server'
 include 'agent'
+include 'commands'
 include 'client'
 include 'browser'
 include 'install'
