--- a/install/src/main/agent/bin/linux-x86-64/sysmon-agent.conf
+++ b/install/src/main/agent/bin/linux-x86-64/sysmon-agent.conf
@@ -11,10 +11,10 @@ cluster_name() {
                 s*egov3*) echo "egov3-office" ;;
                 s*egov4*) echo "egov4-widgets-public" ;;
                 s*egov5*) echo "egov5-widgets-intra" ;;
-                s*prox0[12]*) echo "prox0-public" ;;
-                s*port1[12]*) echo "prox1-intra" ;;
-                s*port0[12]*) echo "port0-public" ;;
-                s*port1[12]*) echo "port1-intra" ;;
+                s*prox0*) echo "prox0-public" ;;
+                s*prox1*) echo "prox1-intra" ;;
+                s*port0*) echo "port0-public" ;;
+                s*port1*) echo "port1-public" ;;
                 s*)       hostname | sed 's/s[itp][0-9]//; s/[0-9][0-9].*//' ;;
                 *)        echo "Cannot determine cluster name"; exit ;;
         esac
