--- a/agent/build.gradle
+++ b/agent/build.gradle
@@ -1,8 +1,7 @@
-apply plugin: 'spring-boot'
+
 
 springBoot {
 	mainClass = "io.jrevolt.sysmon.agent.AgentMain"
-	layout = "MAVEN"
 }
 
 dependencies {
@@ -10,4 +9,7 @@ dependencies {
 	compile project(":io.jrevolt.sysmon.jms")
 
 	compile("com.microsoft.sqlserver:sqljdbc4:4.0")
+	compile("mysql:mysql-connector-java:5.1.34")
+
+//	runtime("org.eclipse.jetty.aggregate:jetty-all:${jettyVersion}")
 }
