--- a/build.gradle
+++ b/build.gradle
@@ -1,36 +1,35 @@
-
 buildscript {
-	ext {
-		springVersion = "4.1.6.RELEASE"
-		springBootVersion = "1.3.0.BUILD-SNAPSHOT"
-		jerseyVersion="2.14"
-		activemqVersion = "5.11.1"
-		jettyVersion = "9.2.9.v20150224"
-	}
-	repositories {
-//		mavenLocal()
-		maven { url "$nexusUrl/content/groups/public/";
-			credentials { username="$nexusUser"; password="$nexusPassword"; }
+	println("Using profile: ${profile}")
+	File f = new File("${project.projectDir}/gradle-${profile}.properties")
+	if (f.exists()) {
+		println("Loading $f.absoluteFile")
+		Properties props = new Properties()
+		props.load(f.newDataInputStream())
+		for (String s : props.stringPropertyNames()) {
+			setProperty(s, props.getProperty(s))
 		}
-//		mavenCentral()
+	}
+	ext.cfg = project.properties
+	repositories {
+		maven { url "$cfg.repository"; }
 	}
 	dependencies {
-		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-//		classpath("javax:javax.tools:1.8")
+		classpath("io.jrevolt.plugins:io.jrevolt.plugins.gradle:develop-SNAPSHOT")
 	}
 }
 
 ext {
 	branch = "$git rev-parse --abbrev-ref HEAD".execute().in.text.trim()
-	branch = "prod"
 	branchShort = branch.replaceFirst(".*/", "")
 	commit = "$git rev-parse HEAD".execute().in.text.trim()
-	commitShort = commit.length() > 7 ? commit.substring(0, 7) : commit
-	tag = branch.matches("master") ? "$git describe --tags --exact-match".execute().in.text.trim() : null
-	gitDescribe = "$git describe --always --dirty=-${System.properties['user.name']}".execute().in.text.trim()
+	commitShort = commit.substring(0, 7)
+	gitDescribe = "$git describe --match=${basetag} --tags --dirty".execute().in.text.trim()
 	snapshotVersion = "${branchShort}-SNAPSHOT"
-	releaseVersion = tag ? "${tag}-${commitShort}" : null
+	releaseVersion = "${gitDescribe}"
 	buildTimestamp = new Date()
+}
+
+allprojects {
 }
 
 subprojects {
@@ -38,10 +37,10 @@ subprojects {
 	apply plugin: 'java'
 	apply plugin: 'maven'
 	apply plugin: 'distribution'
-	apply plugin: org.springframework.boot.gradle.SpringBootPlugin
+	apply plugin: 'jrevolt'
 
-	group = "io.jrevolt.sysmon"
-	version = "${releaseVersion ?: snapshotVersion}"
+	project.group = rootProject.name
+	project.version = Boolean.valueOf("${release}") ? "${releaseVersion}" : "${snapshotVersion}"
 
 	sourceCompatibility = 1.8
 	targetCompatibility = 1.8
@@ -65,25 +64,17 @@ subprojects {
 		}
 	}
 
-	springBoot {
-		layout = "NULL"
-		backupSource = false
-		mainClassName = "UNDEFINED"
-	}
 
 	dependencies {
 //		compile("org.apache.commons:commons-lang3:3.1")
 //		compile("commons-io:commons-io:2.4")
 //		compile("org.glassfish.jersey.core:jersey-client:2.8-SNAPSHOT")
-		testCompile("junit:junit:4.11")
+		//testCompile("junit:junit:4.11")
+		testCompile("org.springframework.boot:spring-boot-starter-test:${springBootVersion}")
 	}
 
 	repositories {
-//		mavenLocal()
-		maven { url "$nexusUrl/content/groups/public/";
-			credentials { username="$nexusUser"; password="$nexusPassword"; }
-		}
-//		mavenCentral()
+		maven { url "$cfg.repository"; }
 	}
 
 	compileJava.doLast { task ->
@@ -134,8 +125,8 @@ subprojects {
 	uploadArchives {
 		repositories {
 			mavenDeployer {
-				repository(url: "$nexusUrl/content/repositories/snapshots") {
-					authentication(userName: "$nexusUser", password: "$nexusPassword")
+				repository(url: releaseVersion ? "$cfg.releases" : "$cfg.snapshots") {
+					authentication(userName: "$cfg.deploymentUserName", password: "$cfg.deploymentPassword")
 				}
 			}
 		}
