--- a/common/build.gradle
+++ b/common/build.gradle
@@ -6,7 +6,7 @@ dependencies {
 	compile("org.springframework.boot:spring-boot-autoconfigure:${springBootVersion}")
 	compile("commons-io:commons-io:2.4")
 	compile("org.apache.commons:commons-lang3:3.2")
-	compile("ch.qos.logback:logback-classic:1.1.2")
+	compile("ch.qos.logback:logback-classic:${logbackVersion}")
 	compile("javax.ws.rs:javax.ws.rs-api:2.0")
 	compile("com.thoughtworks.xstream:xstream:1.4.7")
 }
