--- a/gradle.properties
+++ b/gradle.properties
@@ -22,6 +22,8 @@ servletApiVersion=2.5
 snakeyamlVersion=1.16
 zabbix4jVersion=develop-SNAPSHOT
 logbackVersion=1.1.3
+cloudstackVersion=4.6.0
+jaxrsVersion=2.0.1
 
 
 git=git
