--- a/settings.gradle
+++ b/settings.gradle
@@ -8,6 +8,7 @@ include 'rest'
 include 'server'
 include 'agent'
 include 'commands'
+include 'cloud'
 include 'client'
 include 'browser'
 include 'install'
